<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/main_screen" android:title="@string/main_screen" android:icon="@drawable/ic_launcher_foreground"/>
        <item android:id="@+id/category_screen" android:title="@string/category_screen" android:icon="@drawable/ic_launcher_foreground"/>
        <item android:id="@+id/cart_screen" android:title="@string/cart_screen" android:icon="@drawable/ic_launcher_foreground"/>
        <item android:id="@+id/orders_screen" android:title="@string/orders_screen" android:icon="@drawable/ic_launcher_foreground"/>
        <item android:id="@+id/wishlist_screen" android:title="@string/wishlist_screen" android:icon="@drawable/ic_launcher_foreground"/>

    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/separategrp">


        <item android:id="@+id/profile_screen" android:title="@string/profile_screen" android:icon="@drawable/ic_launcher_foreground"/>
        <item android:id="@+id/about_us_screen" android:title="@string/about_us_screen" android:icon="@drawable/ic_launcher_foreground"/>


    </group>
</menu>