<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/grad_bg">

    <LinearLayout
        android:id="@+id/linLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/emailLogin"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/emailEtForgotPass"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/et_bg"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:inputType="textWebEmailAddress"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/linLayout"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/authToken"
            android:textAllCaps="true"
            android:textColor="@color/nav_bar_item_color"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/authTokenForgotPass"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/et_bg_disabled"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:enabled="false"
            android:clickable="false"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
       android:gravity="center"
        android:layout_below="@+id/linLayout2">

        <Button
            android:id="@+id/forgotPassSendCodeBtn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/button_ripple_transparent"
            android:fontFamily="sans-serif-medium"
            android:paddingLeft="70dp"
            android:paddingRight="70dp"
            android:text="@string/sendCode"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/forgotPassApplyBtn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/btn_bg"
            android:fontFamily="sans-serif-medium"
            android:paddingLeft="70dp"
            android:paddingRight="70dp"
            android:layout_marginTop="15dp"
            android:text="@string/applyCode"
            android:textAllCaps="false"
            android:clickable="false"
            android:enabled="false"
            android:textColor="@color/nav_bar_item_color"
            android:textSize="16sp" />


    </LinearLayout>



</RelativeLayout>