<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:padding="10dp"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingTop="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/order_no"
            android:fontFamily="sans-serif"
            android:layout_alignParentStart="true"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/orderPreviewOrderNoTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginEnd="5dp"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:layout_alignParentEnd="true"
            android:textColor="@color/white"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingTop="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/order_sum"
            android:fontFamily="sans-serif"
            android:layout_alignParentStart="true"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/orderPreviewSumTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:layout_alignParentEnd="true"
            android:textColor="@color/white"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingTop="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/order_status"
            android:fontFamily="sans-serif"
            android:layout_alignParentStart="true"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/orderPreviewOrderStatusTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginEnd="5dp"
            android:fontFamily="sans-serif"
            android:layout_alignParentEnd="true"
            android:textColor="@color/white"/>
    </RelativeLayout>

</LinearLayout>