<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/grad_bg">

    <LinearLayout
        android:id="@+id/linLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/password"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/resetPassPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/et_bg"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/linLayout"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/confirm_pass"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/resetPassConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/et_bg"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>

    <Button
        android:id="@+id/forgotPassSendBtn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/linLayout2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_ripple_transparent"
        android:fontFamily="sans-serif-medium"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:text="@string/resetPassword"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp" />

</RelativeLayout>