<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/grad_bg"
    tools:context="com.androidb2c.microbs.androidb2c.Activities.MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">

        <ImageView
            android:id="@+id/imgView_logo"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:layout_centerHorizontal="true"
            android:src="@drawable/kronos_logo" />

        <RelativeLayout
            android:id="@+id/rellay1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgView_logo"
            >



            <LinearLayout
                android:id="@+id/linlay1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/emailLogin"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/emailEtLogin"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/et_bg"
                        android:fontFamily="sans-serif-light"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:inputType="textWebEmailAddress"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/password"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        app:passwordToggleTint="@color/white"
                        android:layout_marginBottom="5dp"
                        app:passwordToggleEnabled="true">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/passwordEtLogin"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"

                            android:background="@drawable/et_bg"
                            android:fontFamily="sans-serif-light"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:inputType="textPassword"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                    </android.support.design.widget.TextInputLayout>


                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@+id/linlay1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:background="@drawable/button_ripple_transparent"
                android:fontFamily="sans-serif-medium"
                android:paddingLeft="70dp"
                android:paddingRight="70dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rellay2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:fontFamily="sans-serif"
            android:text="@string/register"
            android:textAllCaps="true"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/forgotPassBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@color/transparent"
            android:fontFamily="sans-serif"
            android:text="@string/forgot_password"
            android:textAllCaps="true"
            android:textColor="@color/white" />

    </RelativeLayout>

</RelativeLayout>
