<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/grad_bg"
    tools:context="com.androidb2c.microbs.androidb2c.Activities.MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">





        <ImageView
            android:id="@+id/profileImageLogged"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:adjustViewBounds="true"
            android:layout_marginBottom="10dp"
            android:scaleType="fitCenter"
            android:layout_centerHorizontal="true"
            android:src="@drawable/micro_bs" />

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profileImageLogged"
            android:layout_alignParentStart="true"
            android:layout_marginTop="0dp"

            android:scrollbarStyle="outsideInset"
            android:scrollbarSize="1dp"
            android:scrollbarThumbVertical="@color/white_transparent">

            <RelativeLayout
                android:id="@+id/rellay1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                >


                <LinearLayout
                    android:id="@+id/linlay1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/emailLogin"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textSize="12sp" />

                        <EditText
                            android:id="@+id/profileEmailEt"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/et_bg"
                            android:fontFamily="sans-serif-light"
                            android:paddingLeft="15dp"
                            android:enabled="false"
                            android:inputType="textWebEmailAddress"
                            android:paddingRight="15dp"
                            android:textColor="@color/white"
                            android:textSize="13sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/full_name_logged"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textSize="12sp" />

                        <EditText
                            android:id="@+id/profileFullNameEt"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/et_bg"
                            android:fontFamily="sans-serif-light"
                            android:paddingLeft="15dp"
                            android:enabled="false"
                            android:inputType="text"
                            android:paddingRight="15dp"
                            android:textColor="@color/white"
                            android:textSize="13sp" />

                    </LinearLayout>





                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/address"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textSize="12sp" />

                        <EditText
                            android:id="@+id/profileAddressEt"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/et_bg"
                            android:fontFamily="sans-serif-light"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:enabled="false"
                            android:inputType="text"
                            android:textColor="@color/white"
                            android:textSize="13sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-light"
                                android:text="@string/phone_num"
                                android:textAllCaps="true"
                                android:textColor="@color/white"
                                android:textSize="12sp" />

                            <EditText
                                android:id="@+id/profilePhoneEt"
                                android:layout_width="match_parent"
                                android:layout_height="30dp"
                                android:layout_marginTop="5dp"
                                android:inputType="phone"
                                android:enabled="false"
                                android:background="@drawable/et_bg"
                                android:fontFamily="sans-serif-light"
                                android:paddingLeft="15dp"
                                android:paddingRight="15dp"
                                android:textColor="@color/white"
                                android:textSize="13sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="10dp"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-light"
                                android:text="@string/city"
                                android:textAllCaps="true"
                                android:textColor="@color/white"
                                android:textSize="12sp" />

                            <EditText
                                android:id="@+id/profileCityEt"
                                android:layout_width="match_parent"
                                android:layout_height="30dp"
                                android:layout_marginTop="5dp"
                                android:background="@drawable/et_bg"
                                android:fontFamily="sans-serif-light"
                                android:paddingLeft="15dp"
                                android:enabled="false"
                                android:inputType="text"
                                android:paddingRight="15dp"
                                android:textColor="@color/white"
                                android:textSize="13sp" />

                        </LinearLayout>


                    </LinearLayout>



                </LinearLayout>


                <Button
                    android:id="@+id/logoutButton"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_below="@+id/linlay1"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/button_ripple_transparent"
                    android:fontFamily="sans-serif-medium"
                    android:paddingLeft="70dp"
                    android:paddingRight="70dp"
                    android:text="@string/logout"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </RelativeLayout>
        </ScrollView>

    </RelativeLayout>



</RelativeLayout>
